# cpp-sync

./: .clang-format  CMakeLists.txt  README.md
include/sync/: mutex.hpp  rwlock.hpp
test/: test_mutex.cpp  test_rwlock.cpp
